<resources>
    <string name="app_name">ACME</string>
    <string name="title_active_login">Login</string>
    <string name="password">Password</string>
    <string name="new_password">New password</string>
    <string name="current_password">Current password</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="repeat_password">Confirm password</string>
    <string name="signup">Sign Up</string>
    <string name="text_signup">You do not have an account?</string>
    <string name="link_signup">Sin up</string>
    <string name="all">All</string>
    <string name="user_email">userdefault@gmail.com</string>
    <string name="user_name">User Name</string>
    <string name="update_profile">Save</string>
    <string name="delete_account">Delete account</string>
    <string name="change_password">Change password</string>
    <string name="forget_password">Forgot?</string>
    <string name="title_check_email">Check email</string>
    <string name="subtitle_check_email">To complete your registration. Please! check your email and then click continue.</string>
    <string name="continue_check_email">Continue</string>
    <string name="title_account_recovery">Recovery account</string>
    <string name="subtitle_account_recovery">Enter your email so that you can be sent an email with the steps to change your password.</string>
    <string name="recovery_account">Send</string>
    <string name="title_update_password">Update password</string>
    <string name="subtitle_update_password">For security reasons to change your password, you must first enter your current password.</string>
    <string name="title_delete_account">Delete account</string>
    <string name="subtitle_delete_account">For security reasons to delete your account completely, you must enter your password.</string>
    <string name="delete">Delete</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="todo">TODO</string>
    <string name="cancel">Cancel</string>
    <string name="sign_out">Sign Out</string>
    <string name="textview">TextView</string>
    <string name="edit">edit</string>
    <string name="view">view</string>
    <string name="calendar">Calendar</string>
    <string name="sinc">Sinc</string>
    <string name="add">Add</string>
    <string name="menu">Menu</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="insert_service">Insert Service</string>
    <string name="address">Address</string>
    <string name="date">Date</string>
    <string name="services_type">Services Type</string>
    <string name="department">Department</string>
    <string name="dispatch_note">Dispatch Note</string>
    <string name="customer_info">Customer Info:</string>
    <string name="schedule_for">Schedule For</string>
    <string name="custom_info">Custom info:</string>
    <string name="scheduled_for">Scheduled For:</string>
    <string name="jessica_green">Jessica Green Maricona</string>
    <string name="_8384483949">8384483949</string>
    <string name="saturday_dec_24">Saturday, Dec 24</string>
    <string name="distance">Distance</string>
    <string name="job_site_address">Job Site Address:</string>
    <string name="aproximadamente_17_min">Aproximadamente 17 min</string>
    <string name="_11_9_millas">11.9 millas</string>
    <string name="get_directions">Get Directions</string>
    <string name="dept_class">Dept. Class:</string>
    <string name="reason_for_call">Reason for Call:</string>
    <string name="ticket_32787">Ticket #</string>
    <string name="title_activity_google_maps">GoogleMaps</string>
    <string name="back">back</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="postal_code">Postal Code</string>
    <string name="save">Save</string>
</resources>