<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.OverviewFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottom_toolbar_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.14" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:elevation="5dp"
            app:layout_constraintBottom_toBottomOf="@id/bottom_toolbar_guideline"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/top_toolbar_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.2" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/mid_toolbar_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.6" />


            <ImageView
                android:id="@+id/back_dashboard"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_baseline_arrow_back_ios_24"
                app:layout_constraintBottom_toTopOf="@id/mid_toolbar_guideline"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="@id/div1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/top_toolbar_guideline"
                />


            <TextView
                android:id="@+id/calendar_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="Dashboard"
                android:textColor="@color/principal"
                android:textAlignment="center"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/div1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mid_toolbar_guideline" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/div1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.18" />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/div2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.32" />

            <TextView
                android:id="@+id/header_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="Work Ticket"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/div3"
                app:layout_constraintStart_toStartOf="@id/div2"
                app:layout_constraintTop_toBottomOf="@id/top_toolbar_guideline" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/div3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.65" />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/div4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.83" />

            <ImageView
                android:id="@+id/menu_image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_baseline_menu"
                app:layout_constraintBottom_toTopOf="@+id/mid_toolbar_guideline"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/div4"
                app:layout_constraintTop_toTopOf="@id/top_toolbar_guideline" />

            <TextView
                android:id="@+id/menu_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="Menu"
                android:textColor="@color/principal"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/div4"
                app:layout_constraintTop_toTopOf="@id/mid_toolbar_guideline" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="50dp"
            app:layout_constraintTop_toTopOf="@+id/bottom_toolbar_guideline">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
                tools:layout_editor_absoluteX="3dp">

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="2">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_columnWeight="1"
                        android:layout_gravity="fill_horizontal"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/customer_info" />


                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="10dp"
                                android:text="@string/jessica_green" />

                            <TextView
                                android:id="@+id/phone"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawableStart="@drawable/ic_baseline_call_24"
                                android:padding="10dp"
                                android:text="@string/_8384483949" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_columnWeight="1"
                        android:layout_gravity="fill_horizontal"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/scheduled_for" />

                        <TextView
                            android:id="@+id/fecha"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/saturday_dec_24" />
                    </LinearLayout>

                </GridLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="3">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:layout_gravity="fill_horizontal"
                        android:orientation="vertical">

                        <GridLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:columnCount="2"
                            tools:ignore="UselessParent">

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_columnWeight="1"
                                android:layout_gravity="fill_horizontal"
                                android:orientation="vertical">

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    tools:ignore="UseCompoundDrawables">

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:drawableStart="@drawable/ic_baseline_location_on_24"
                                        android:padding="10dp"
                                        android:text="@string/job_site_address" />
                                </LinearLayout>

                                <TextView
                                    android:id="@+id/adress"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"

                                    android:padding="10dp" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:drawableStart="@drawable/ic_baseline_near_me_24"
                                    android:padding="10dp"
                                    android:text="@string/distance" />


                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_columnWeight="1"
                                android:layout_gravity="fill_horizontal"
                                android:gravity="center"
                                android:orientation="vertical"
                                android:padding="10dp">

                                <Button
                                    android:id="@+id/mapsG"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:background="@color/principal"
                                    android:text="@string/get_directions" />

                            </LinearLayout>

                        </GridLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_columnWeight="1"
                        android:layout_gravity="fill_horizontal"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/dispatch_note" />

                        <TextView
                            android:id="@+id/dispatchNote"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@android:color/darker_gray" />

                        <GridLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:columnCount="4">
                            <TextView
                                android:id="@+id/dept1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_row="0"
                                android:layout_column="0"
                                app:layout_constraintEnd_toEndOf="@id/dept"
                                android:layout_columnWeight="1"
                                android:gravity="center"
                                android:padding="10dp"
                                android:text="@string/dept_class" />
                            <TextView
                                android:id="@+id/dept"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_columnWeight="1"
                                android:gravity="center"
                                android:padding="10dp"
                                android:text="@string/dept_class" />
                            <TextView
                                android:id="@+id/service1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_columnWeight="1"
                                app:layout_constraintEnd_toEndOf="@id/service"
                                android:gravity="center"
                                android:padding="10dp"
                                android:text="Service Type:" />
                            <TextView
                                android:id="@+id/service"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_columnWeight="1"
                                android:layout_gravity="fill_horizontal"
                                android:gravity="center"
                                android:padding="10dp"
                                android:text="Service Type:" />
                        </GridLayout>


                    </LinearLayout>

                </GridLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/reason"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/reason_for_call" />

                    <TextView
                        android:id="@+id/list_reason"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/reason_for_call" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/ticket_32787" />

                    <TextView
                        android:id="@+id/ticket"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp" />

                </LinearLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>